feat: workspace-service tasks CRUD, RSQL filtering, users_cache Kafka consumer (API-22, API-33)
Closes #328
Closes #339
